<resources>
    <string name="app_name">AbsolutMixr</string>
    <string name="cabinet_title">My Cabinet</string>
    <string name="ingredient_type_prompt">What type of ingredient?</string>
    <string name="add">Add Ingredient</string>
    <string name="disclaimer">Note: If you do not see the ingredient then it is not in our database.</string>
    <string name="or">OR</string>
    <string name="add_by_upc">Add Ingredient by UPC</string>
    <string-array name="type_array">
        <item></item>
        <item>Mixers</item>
        <item>Base Spirit</item>
        <item>Brandy</item>
        <item>Whiskey</item>
        <item>Gin</item>
        <item>Vodka</item>
        <item>Tequila</item>
        <item>Rum</item>
        <item>Spirits-Other</item>
        <item>Decoration</item>
        <item>Fruits</item>
        <item>Berries</item>
        <item>Ice</item>
        <item>Spices/Herbs</item>
        <item>Other</item>
    </string-array>


    <string name="vertical_ellipsis">&#8942;</string>
    <string name="ingList"><b>Ingredients: </b></string>
    <string name="tasList"><b>Tastes: </b></string>
    <string name="occList"><b>Occasions: </b></string>
    <string-array name="num_drinks_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="hour_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
