<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    tools:context=".AddIngredientFragment">
    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="What type of ingredient?"/>
    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_array"
        android:prompt="@string/ingredient_type_prompt"/>
    <ProgressBar
        android:id="@+id/progressBarAddIngredient"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/ingredient_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="Which ingredient?"
        android:visibility="invisible"/>


    <Spinner
        android:id="@+id/ingredient_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_array"
        android:prompt="@string/ingredient_type_prompt"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/add"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/or"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/add_by_upc"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/add_by_upc" />
    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/disclaimer"/>
</LinearLayout>

